Wide selection in histogram

--- a/assets/admin/views/main.html
+++ b/assets/admin/views/main.html
@@ -40,7 +40,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <highchart id="payHistogram" config="payHistogramConfig" ng-if="chart=='price_histogram'"></highchart>
+    <div id="payHistogram" ng-show="chart=='price_histogram'"></div>
   </div>
 </div>
 
